kernel_inc = include_directories('inc', 'pt')
kernel_src = files(
    'src/MadEvent.c',
    'src/MadFastBuffer.c',
    'src/MadGlobal.c',
    'src/MadMemory.c',
    'src/MadMessage.c',
    'src/MadMutex.c',
    'src/MadSemaphore.c',
    'src/MadThread.c',
    'src/MadTimeDly.c',
    'src/MadWaitQueue.c',
    'pt/timer.c'
)
